# FiveCat

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  home.py  orders.py  posts.py  support.py  users.py
backend/app/core/: config.py
backend/app/data/: mock_data.py
backend/app/models/: entities.py
backend/app/schemas/: auth.py  common.py  orders.py  posts.py  support.py  users.py
backend/app/services/: geo.py  order_rules.py  store.py
backend/petneighbor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/sql/: init_postgis.sql
docs/: current-system-documentation.md  database-er-structure.md  product-overview.md  部署文档.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/api/: client.ts  mock.ts
frontend/src/components/: AmapPicker.vue  OrderCard.vue  PostCard.vue  SectionHeader.vue
frontend/src/constants/: support.ts
frontend/src/layouts/: AppShell.vue
frontend/src/router/: index.ts
frontend/src/store/: session.ts
frontend/src/styles/: base.css
frontend/src/types/: amap.d.ts  app.ts
frontend/src/utils/: order.ts
frontend/src/views/: AuthView.vue  CommunityView.vue  HomeView.vue  OrdersView.vue  ProfileView.vue
scripts/: setup-local.ps1  start-local.ps1  stop-local.ps1
