[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petneighbor-backend"
version = "0.1.0"
description = "PetNeighbor backend powered by FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.41",
  "asyncpg>=0.30.0",
  "geoalchemy2>=0.17.1",
  "redis>=6.1.0",
  "python-multipart>=0.0.20"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.0"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["sql*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]